Revamped everything to be Beautifurl customized

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 ---
 layout: default
+pagetitle: Make your URLs beautiful - BEAUTIFURL
 ---
+    {% include header.html %}
+    {% include contact_static.html %}
